--- a/minimal_example.ipynb
+++ b/minimal_example.ipynb
@@ -111,25 +111,25 @@
     "\n",
     "\n",
     "\n",
-    "def find_optimal_sigma(sigmas,epsilon, alpha,Binary=False,Task=2):\n",
-    "    #### to find the optimal sigma just do a search through all the results \n",
-    "    #### and save the one for each parameter which has the minimal bound\n",
-    "    #### Do we do this per epoch or for some other value? The sigma which yields the lowest bound overall for some epoch?\n",
-    "    optimal=[0,1]\n",
-    "    # search through all epochs and pick the sigma which yields the smallest bound during the whole training process\n",
-    "    for sigma in sigmas:\n",
-    "        sigma_tmp=sigma\n",
-    "        sigma=sigma[0]*10**(-1*sigma[1])\n",
-    "        if Binary:\n",
-    "            result_path=\"results/\"+\"task\"+str(TASK)+\"/Binary/\"+str(int(1000*epsilon))+\"_\"+str(int(100*alpha))+\"_\"+str(sigma_tmp[0])+str(sigma_tmp[1])\n",
-    "        else:\n",
-    "            result_path=\"results/\"+\"task\"+str(TASK)+\"/\"+str(int(1000*epsilon))+\"_\"+str(int(100*alpha))+\"_\"+str(sigma_tmp[0])+str(sigma_tmp[1])\n",
-    "        results=pd.read_pickle(result_path+\"_results.pkl\")\n",
-    "        MIN=np.min(results[\"Bound\"])\n",
-    "        if (MIN<optimal[1]):\n",
-    "            optimal[1]=MIN\n",
-    "            optimal[0]=sigma\n",
-    "    print(\"The optimal sigma is {} with bound value {}\".format(optimal[0],optimal[1]))\n"
+    "# def find_optimal_sigma(sigmas,epsilon, alpha,Binary=False,Task=2):\n",
+    "#     #### to find the optimal sigma just do a search through all the results \n",
+    "#     #### and save the one for each parameter which has the minimal bound\n",
+    "#     #### Do we do this per epoch or for some other value? The sigma which yields the lowest bound overall for some epoch?\n",
+    "#     optimal=[0,1]\n",
+    "#     # search through all epochs and pick the sigma which yields the smallest bound during the whole training process\n",
+    "#     for sigma in sigmas:\n",
+    "#         sigma_tmp=sigma\n",
+    "#         sigma=sigma[0]*10**(-1*sigma[1])\n",
+    "#         if Binary:\n",
+    "#             result_path=\"results/\"+\"task\"+str(TASK)+\"/Binary/\"+str(int(1000*epsilon))+\"_\"+str(int(100*alpha))+\"_\"+str(sigma_tmp[0])+str(sigma_tmp[1])\n",
+    "#         else:\n",
+    "#             result_path=\"results/\"+\"task\"+str(TASK)+\"/\"+str(int(1000*epsilon))+\"_\"+str(int(100*alpha))+\"_\"+str(sigma_tmp[0])+str(sigma_tmp[1])\n",
+    "#         results=pd.read_pickle(result_path+\"_results.pkl\")\n",
+    "#         MIN=np.min(results[\"Bound\"])\n",
+    "#         if (MIN<optimal[1]):\n",
+    "#             optimal[1]=MIN\n",
+    "#             optimal[0]=sigma\n",
+    "#     print(\"The optimal sigma is {} with bound value {}\".format(optimal[0],optimal[1]))\n"
    ]
   },
   {
