add batch training

--- a/minimal_compute_bound.ipynb
+++ b/minimal_compute_bound.ipynb
@@ -48,15 +48,16 @@
     "from experiments.models import *\n",
     "from experiments.training import *\n",
     "from bounds.bounds import *\n",
+    "from util.batch import *\n",
     "from util.kl import *\n",
     "from util.misc import *\n",
-    "from results.plotting import *\n",
     "\n",
     "# Hyper-parameters\n",
     "batch_size = 128\n",
     " \n",
     "\n",
-    "TASK = 4"
+    "project_folder=\"/cephyr/users/adambre/Alvis/mnist_transfer/\"\n",
+    "# project_folder=\"/cephyr/NOBACKUP/groups/snic2021-23-538/mnist_transfer/\""
    ]
   },
   {
@@ -72,22 +73,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_source,y_source,x_target,y_target=load_task(TASK)"
+    "task = 4\n",
+    "x_source,y_source,x_target,y_target=load_task(task)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Functions for evaluating bound"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -104,36 +92,41 @@
    },
    "outputs": [],
    "source": [
-    "from bounds.bounds import *\n",
-    "from util.batch import *\n",
+    "\n",
     "architecture=\"lenet\"\n",
     "delta=0.05\n",
-    "Binary=True\n",
+    "binary=True\n",
     "epsilons=[0.01]\n",
-    "alphas=[0.3]#0,0.3]\n",
+    "alphas=[0]#0,0.3]\n",
     "sigmas=[[3,2]]\n",
-    "\n",
+    "seed=69105\n",
     "for alpha in alphas:\n",
     "    print(\"alpha:\"+str(alpha))\n",
     "    if alpha==0:\n",
     "        x_bound=x_source\n",
     "        y_bound=y_source\n",
     "    else:\n",
-    "        x_bound, x_prior, y_bound , y_prior = train_test_split(x_source,y_source,test_size=alpha,random_state=69105)\n",
-    "        #del x_source, y_source\n",
-    "        #x_bound=x_bound[:1000]\n",
-    "        #y_bound=y_bound[:1000]\n",
-    "        #x_target=x_target[:1000]\n",
-    "        #y_target=y_target[:1000]\n",
+    "        x_bound, x_prior, y_bound , y_prior = train_test_split(x_source,y_source,test_size=alpha,random_state=seed)\n",
     "    for epsilon in epsilons:\n",
     "        print(\"epsilon:\"+str(epsilon))\n",
     "        for sigma in sigmas:    \n",
     "            print(\"sigma:\"+str(sigma))\n",
-    "            paths=posterior_checkpoints(TASK, epsilon, alpha, binary=True,architecture=\"lenet\")\n",
+    "            paths=posterior_checkpoints(task, epsilon, alpha, binary=binary,architecture=\"lenet\")\n",
     "            for p in paths:\n",
-    "                results=compute_bound_parts(TASK,p,x_bound[:1000],y_bound[:1000],x_target[:1000],y_target[:1000],alpha=alpha,sigma=sigma,epsilon=epsilon,binary=Binary,architecture=architecture)\n",
-    "               #task, posterior_path, x_bound, y_bound, x_target, y_target, alpha=0.1, delta=0.05, epsilon=0.01, \n",
-    "                  #prior_path=None, bound='germain', binary=False, n_classifiers=4, sigma=[3,3], seed=None,batch_size=128,architecture=\"lenet\"):"
+    "                results=compute_bound_parts(task,p,x_bound,y_bound,x_target,y_target,alpha=alpha,sigma=sigma,epsilon=epsilon,binary=binary,architecture=architecture)\n",
+    "                \n",
+    "                checkpoint = results['checkpoint'].values.ravel()[0]\n",
+    "\n",
+    "                if binary:\n",
+    "                    result_path=project_folder+\"results/\"+\"task\"+str(task)+\"/Binary/\"+str(architecture)+\"/\"+str(int(1000*epsilon))+\\\n",
+    "                        \"_\"+str(int(100*alpha))+\"_\"+str(sigma[0])+str(sigma[1])+'_'+str(seed)+'_'+checkpoint+'_results.pkl'\n",
+    "                else:\n",
+    "                    result_path=project_folder+\"results/\"+\"task\"+str(task)+\"/\"+str(architecture)+\"/\"+str(int(1000*epsilon))+\"_\"+str(int(100*alpha))+\\\n",
+    "                    \"_\"+str(sigma[0])+str(sigma[1])+'_'+str(seed)+'_'+checkpoint+'_results.pkl'\n",
+    "\n",
+    "                # Create dir\n",
+    "                os.makedirs(os.path.dirname(result_path), exist_ok=True)\n",
+    "                results.to_pickle(result_path)"
    ]
   }
  ],
