--- a/batch_compute_bound.ipynb
+++ b/batch_compute_bound.ipynb
@@ -34,13 +34,10 @@
     "from data.label_shift import label_shift_linear, plot_labeldist, plot_splitbars\n",
     "from data.tasks import load_task\n",
     "from experiments.training import *\n",
-    "from experiments.SL_bound import *\n",
-    "#from experiments.DA_bound import *\n",
     "from bounds.bounds import *\n",
     "from util.kl import *\n",
     "from util.misc import *\n",
     "from util.batch import *\n",
-    "from results.plotting import *\n",
     "\n",
     "# Hyper-parameters\n",
     "task = 4\n",
@@ -50,11 +47,9 @@
     "binary=True\n",
     "bound='germain'\n",
     "architecture=\"lenet\"\n",
-    "epsilons=[0.01]#,0.001]0.15,0.1,0.05\n",
-    "#[0.1,0.2,0.3,0.4,0.5,0.6,0.7,0.8,0.9]\n",
-    "# 0.6-0.9 left on chexpert\n",
-    "alphas=[0.3]#,0.4,0.5,0.6,0.7,0.8,0.9],0.6,0.7,0.8,0.9\n",
-    "sigmas=[[3,2]]#,[3,2],[3,3]\n",
+    "epsilons=[0.01]\n",
+    "alphas=[0.3]\n",
+    "sigmas=[[3,2]]\n",
     "\n",
     "project_folder2 = \"/cephyr/users/adambre/Alvis/\"\n",
     "project_folder=\"/cephyr/NOBACKUP/groups/snic2021-23-538/mnist_transfer/\""
@@ -132,8 +127,8 @@
     "            for a in arg_list:#[5:]:   \n",
     "\n",
     "                ckpt = os.path.splitext(os.path.basename(a['posterior_path']))[0]\n",
-    "                fid = project_folder+'logs/batch_t-%d_r-%d_a-%.4f_s-%d%d_e-%.4f_d-%.4f_b-%d_n-%d_B-%s_c-%s' % \\\n",
-    "                    (task, seed, alpha, sigma[0], sigma[1], epsilon, delta, binary, n_classifiers, bound, ckpt)\n",
+    "                fid = project_folder+'logs/batch_t-%d_r-%d_a-%.4f_s-%d%d_e-%.4f_d-%.4f_b-%d_n-%d_B-%s_c-%s_A-%s' % \\\n",
+    "                    (task, seed, alpha, sigma[0], sigma[1], epsilon, delta, binary, n_classifiers, bound, ckpt, architecture)\n",
     "\n",
     "                sigstr = '\"%d.%d\"' % (sigma[0], sigma[1])\n",
     "                exp = 'task=%d,seed=%d,alpha=%.4f,sigma=\"%s\",epsilon=%.4f,delta=%.4f,'% (task, seed, alpha, sigstr, epsilon, delta)\\\n",
@@ -168,7 +163,7 @@
     "\"\"\"\n",
     "to remove all jobs queued\n",
     "\n",
-    "squeue -u adambre | awk '{if ($1!=JOBID) && ($1!=160158) {print $1}}' | tail -n +2 |xargs scancel\n",
+    "squeue -u adambre | awk '{if ($1!=JOBID) && ($1!=bash_jobid) {print $1}}' | tail -n +2 |xargs scancel\n",
     "\n",
     "\n",
     "\"\"\""
